<resources>
    <string name="app_name">Attendance App</string>
    <string name="a_convenient_app_to_maintain_student_attendance_records">A convenient app to maintain student attendance records</string>
    <string name="forgot_password_text">Forgot Password ?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="go">GO</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in_to_continue">Sign In to Continue</string>
    <string name="todo">TODO</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="email_id">Email id</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="sign_up">SIGN UP</string>
    <string name="submit_attendance">Submit Attendance</string>

</resources>