<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:fadingEdgeLength="10dp"
    android:orientation="vertical"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:id="@+id/outer_linear"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo"
        android:fadingEdge="horizontal|vertical"
        android:src="@drawable/transparent_attendance"
        android:transitionName="logo_image" />

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kavoon"
        android:text="@string/welcome"
        android:textColor="#000"
        android:textSize="25sp"
        android:transitionName="logo_text" />

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/bigshot_one"
        android:text="@string/sign_up_to_continue"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomEnd="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/nameicon"
                app:startIconTint="@color/black"
                app:endIconMode="clear_text"
                android:hint="@string/full_name"

                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:visibility="visible" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phno"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomEnd="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="Please enter a 10 digit phone number"
                android:hint="@string/phone_number"
                app:startIconDrawable="@drawable/phoneicon"
                app:startIconTint="@color/black"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fadingEdgeLength="10dp"
                    android:inputType="number"
                    android:digits="1234567890"
                    android:maxLength="10"
                    android:visibility="visible" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomEnd="20dp"
                android:hint="@string/email_id"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/emailicon"
                app:startIconTint="@color/black"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:helperText="Use upto 15 characters (alphanumeric only)"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:startIconDrawable="@drawable/usernameicon"
                app:startIconTint="@color/black"
                app:endIconMode="clear_text"
                app:counterOverflowTextColor="@color/red"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--require-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomEnd="20dp"
                android:hint="@string/password"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/passwordicon"
                app:startIconTint="@color/black"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/all_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FF000000"
        android:enabled="true"
        android:elevation="100dp"
        android:onClick="allClear"
        android:text="@string/clear_all"
        android:textColor="@color/black"

        android:textColorHighlight="@color/black"
        app:backgroundTint="@color/white" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="250dp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:onClick="confirmInput"
        android:textSize="16sp"
        android:shadowColor="@color/purple_700"
        android:text="@string/sign_up"
        android:textColor="#fff"/>

    <Button
        android:id="@+id/already_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="1dp"
        android:textStyle="bold"
        android:layout_marginBottom="6dp"
        android:background="#00000000"
        android:elevation="0dp"
        android:fontFamily="@font/bigshot_one"
        android:text="@string/already_have_an_account_sign_in"
        android:textColor="#000" />

</LinearLayout>